--- a/QrCoderBlazor/wwwroot/manifest.json
+++ b/QrCoderBlazor/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "BlazorApp-empty1",
-  "short_name": "BlazorApp-empty1",
+  "name": "QrCoderBlazor",
+  "short_name": "QrCoderBlazor",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
