--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,8 +39,8 @@ jobs:
         run: dotnet publish QrCoderBlazor/QrCoderBlazor.csproj -c Release -o release --nologo
 
       # changes the base-tag in index.html from '/' to 'QrCoderBlazor' to match GitHub Pages repository subdirectory
-      #- name: Change base-tag in index.html from / to QrCoderBlazor
-      #  run: sed -i 's/<base href="\/" \/>/<base href="\/QrCoderBlazor\/" \/>/g' release/wwwroot/index.html
+      - name: Change base-tag in index.html from / to QrCoderBlazor
+        run: sed -i 's/<base href="\/" \/>/<base href="\/QrCoderBlazor\/" \/>/g' release/wwwroot/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
